feat: response for get all is now with pagination
