# api/product/controller.go
@@ -56,6 +56,11 @@ func (controller *Controller) Create(c echo.Context) (err error) {
 // GetAll godoc
 // @Summary Get product
 // @Description  Get product data from database
+// @Param query   query  string  false  "search data by query"
+// @Param brand   query  string  false  "search data by brand"
+// @Param category   query  string  false  "search data by category"
+// @Param page   query  string  false  "search data by page"
+// @Param page_size   query  string  false  "search data by page size"
 // @Tags         products
 // @Produce      json
 // @Success      200  {array}  models.ProductBrand
@@ -66,7 +71,12 @@ func (controller *Controller) Create(c echo.Context) (err error) {
 // @Router       /v1/products [get]
 func (controller *Controller) GetAll(c echo.Context) (err error) {
 	log.Print("enter controller.product.GetAll")
-	datas, err := controller.service.GetAll()
+	query := c.QueryParam("query")
+	page := c.QueryParam("page")
+	pageSize := c.QueryParam("page_size")
+	brand := c.QueryParam("brand")
+	category := c.QueryParam("category")
+	datas, err := controller.service.GetAll(query, brand, category, page, pageSize)
 	if err != nil {
 		return c.JSON(http.StatusBadRequest, response.BasicProductResponse{
 			Status:  "fail",
@@ -87,7 +97,7 @@ func (controller *Controller) GetAll(c echo.Context) (err error) {
 // @Failure      500  {object}  response.BasicProductResponse
 // @Router       /v1/clients/products [get]
 func (controller *Controller) ClientGetAll(c echo.Context) (err error) {
-	log.Print("enter controller.product.GetAll")
+	log.Print("enter controller.product.ClientGetAll")
 	datas, err := controller.service.ClientGetAll()
 	if err != nil {
 		return c.JSON(http.StatusBadRequest, response.BasicProductResponse{
@@ -110,7 +120,7 @@ func (controller *Controller) ClientGetAll(c echo.Context) (err error) {
 // @Failure      500  {object}  response.BasicProductResponse
 // @Router       /v1/clients/products/:slug [get]
 func (controller *Controller) ClientGetAllBySlug(c echo.Context) (err error) {
-	log.Print("enter controller.product.GetAll")
+	log.Print("enter controller.product.ClientGetAllBySlug")
 	slug := c.Param("slug")
 	datas, err := controller.service.ClientGetAllBySlug(slug)
 	if err != nil {
