# docs/swagger.json
@@ -149,7 +149,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/dto.ProductCategory"
+                                "$ref": "#/definitions/backend_capstone_services_product_dto.ProductCategory"
                             }
                         }
                     },
@@ -197,7 +197,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/dto.ProductCategory"
+                            "$ref": "#/definitions/backend_capstone_services_product_dto.ProductCategory"
                         }
                     },
                     "400": {
@@ -277,13 +277,33 @@
                     "product_brands"
                 ],
                 "summary": "Get brand",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "search data by query",
+                        "name": "query",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "search data by page",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "search data by page size",
+                        "name": "page_size",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/models.ProductBrand"
+                                "$ref": "#/definitions/dto.ResponseBodyProductBrand"
                             }
                         }
                     },
@@ -658,13 +678,33 @@
                     "product_categories"
                 ],
                 "summary": "Get all category",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "search data by query",
+                        "name": "query",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "search data by page",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "search data by page size",
+                        "name": "page_size",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/models.ProductCategory"
+                                "$ref": "#/definitions/dto.ResponseBodyProductCategory"
                             }
                         }
                     },
@@ -923,6 +963,38 @@
                     "products"
                 ],
                 "summary": "Get product",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "search data by query",
+                        "name": "query",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "search data by brand",
+                        "name": "brand",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "search data by category",
+                        "name": "category",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "search data by page",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "search data by page size",
+                        "name": "page_size",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -1946,6 +2018,62 @@
         }
     },
     "definitions": {
+        "backend_capstone_services_product_dto.ProductCategory": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "string",
+                    "example": "xxxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx"
+                },
+                "label": {
+                    "type": "string",
+                    "example": "Some Category"
+                },
+                "products": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/dto.ClientProduct"
+                    }
+                },
+                "slug": {
+                    "type": "string",
+                    "example": "some-category"
+                }
+            }
+        },
+        "backend_capstone_services_productcategory_dto.ProductCategory": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "type": "string",
+                    "example": "some description"
+                },
+                "icon": {
+                    "type": "string",
+                    "example": "mdi-some-category"
+                },
+                "id": {
+                    "type": "string",
+                    "example": "xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx"
+                },
+                "is_available": {
+                    "type": "boolean",
+                    "example": true
+                },
+                "name": {
+                    "type": "string",
+                    "example": "Some Name"
+                },
+                "product_sum": {
+                    "type": "integer",
+                    "example": 33
+                },
+                "slug": {
+                    "type": "string",
+                    "example": "some-name"
+                }
+            }
+        },
         "dto.BillClient": {
             "type": "object",
             "properties": {
@@ -2069,26 +2197,66 @@
                 }
             }
         },
-        "dto.ProductCategory": {
+        "dto.ProductBrand": {
             "type": "object",
             "properties": {
+                "category": {
+                    "type": "string",
+                    "example": "E-Money"
+                },
+                "default:true;not null": {
+                    "type": "boolean",
+                    "example": false
+                },
+                "description": {
+                    "type": "string",
+                    "example": "some description"
+                },
+                "icon_path": {
+                    "type": "string",
+                    "example": "mdi-some-brand"
+                },
                 "id": {
                     "type": "string",
-                    "example": "xxxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx"
+                    "example": "xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx"
                 },
-                "label": {
+                "name": {
                     "type": "string",
-                    "example": "Some Category"
+                    "example": "some name"
                 },
-                "products": {
+                "product_sum": {
+                    "type": "integer",
+                    "example": 33
+                }
+            }
+        },
+        "dto.ResponseBodyProductBrand": {
+            "type": "object",
+            "properties": {
+                "datas": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/dto.ClientProduct"
+                        "$ref": "#/definitions/dto.ProductBrand"
                     }
                 },
-                "slug": {
-                    "type": "string",
-                    "example": "some-category"
+                "page_length": {
+                    "type": "integer",
+                    "example": 3
+                }
+            }
+        },
+        "dto.ResponseBodyProductCategory": {
+            "type": "object",
+            "properties": {
+                "datas": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/backend_capstone_services_productcategory_dto.ProductCategory"
+                    }
+                },
+                "page_length": {
+                    "type": "integer",
+                    "example": 3
                 }
             }
         },
